<?xml version="1.0"?>
<package>
  <name>adis_16488</name>
  <version>0.0.0</version>
  <maintainer email="frog@todo.todo">frog</maintainer>
  <license>GPLv3</license>
  <description>The ADIS16488 package</description>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
