<package>
  <name>my_robot_hw</name>
  <version>0.0.0</version>
  <description>ros_control_hw</description>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/gazebo_ros_control</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_pkgs/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_pkgs</url>

  <author>frog</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>gazebo_ros</build_depend> 
  <build_depend>control_toolbox</build_depend> 
  <build_depend>controller_manager</build_depend> 
  <build_depend>pluginlib</build_depend> 
  <build_depend>transmission_interface</build_depend> 
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>urdf</build_depend>
  
  <run_depend>roscpp</run_depend> 
  <run_depend>gazebo_ros</run_depend> 
  <run_depend>control_toolbox</run_depend> 
  <run_depend>controller_manager</run_depend> 
  <run_depend>pluginlib</run_depend> 
  <run_depend>transmission_interface</run_depend> 
  <run_depend>urdf</run_depend>

  <export>
   
  </export>
</package>
